[package]
name = "wai-hashids"
description = "Hashids with WAI bindings"
readme = "README.md"
version = "0.1.1"
edition = "2021"

[package.metadata.wasmer]
namespace = "wai"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "./bindings.wai" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
harsh = "0.2.2"
wai-bindgen-rust = "0.2.3"
